# everword-lib

./: Cargo.toml
src/: lib.rs
src/dict/: mod.rs  model.rs  traits.rs
src/dict/providers/: mod.rs  provider.rs
src/dict/providers/cambridge/: mod.rs  parser.rs  statics.rs
src/utils/: macros.rs
tests/: cambridge.rs  constants.rs
