[package]
name = "everword-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-trait = "0.1.75"
lazy_static = "1.4.0"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.35.1"
